# pdverify

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: loop_with_construction_mcp.md  quickstart.py
src/pdverify/: __init__.py  analyze.py  audio.py  cli.py  compare.py  control.py  describe.py  errors.py  expect.py  pd_locate.py  render.py  report.py  rewrite.py  score.py  verify.py  viz.py  wavio.py  wrapper.py
src/pdverify/_assets/: pdverify_notein.pd  pdverify_sink~.pd
src/pdverify/features/: __init__.py  integrity.py  level.py  pitch.py  spectral.py  temporal.py
tests/: test_compare.py  test_control.py  test_describe.py  test_features_synthetic.py  test_pd_locate.py  test_render_smoke.py  test_rewrite.py  test_score.py  test_viz.py
tests/fixtures/: midi_synth.pd  noise.pd  nosink.pd  recv_synth.pd  silence.pd  sine440.pd
